mano-cli/tests/snapshots/cli__file_errors_show_filename.snap
---
source: mano-cli/tests/cli.rs
expression: stderr_clean
---
Error: Tá moscando, Brown?
   ╭─[ <tempfile>.mano:1:1 ]
   │
 1 │ @
   │ ┬  
   │ ╰── E esse '@' aí, truta?
───╯
